# VaultSeek

./: Cargo.toml  LICENSE-MIT  README.md
crates/vaultseek_core/: Cargo.toml
crates/vaultseek_core/samples/: filelist.efu
crates/vaultseek_core/src/: file_tree.rs  lib.rs  post_filter.rs  searcher.rs  sorter.rs
crates/vaultseek_core/src/indexer/: bigram_index.rs  mod.rs
crates/vaultseek_core/src/loader/: efu.rs  mod.rs  ncdu_json.rs
crates/vaultseek_core/src/query/: date.rs  lexer.rs  mod.rs  query_parser.rs
crates/vaultseek_web_ui/: Cargo.toml
crates/vaultseek_web_ui/public/: index.html
crates/vaultseek_web_ui/src/: main.rs
