[workspace]
members = ["crates/vaultseek_core", "crates/vaultseek_web_ui"]
default-members = ["crates/vaultseek_web_ui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "VaultSeek File Search — high-performance EFU file search web application"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SNisin/VaultSeek"
keywords = ["search", "files", "web", "rust", "performance"]
categories = ["web-programming", "filesystem", "data-structures"]
rust-version = "1.88"

[profile.dev]
opt-level = 1           # Opt level 0 is too slow even for dev builds
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = true             # Keep debug info for profiling
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "fat"              # Enable LTO for better performance
panic = 'unwind'
incremental = false
codegen-units = 1        # Use a single codegen unit for better optimization
rpath = false

[profile.release-fast] # Custom profile for faster builds with close to release optimizations
inherits = "release"
lto = false          # Disable LTO for faster compile times
codegen-units = 16   # More codegen units for faster compile times

[workspace.dependencies]
vaultseek_core = { path = "crates/vaultseek_core" }
vaultseek_web_ui = { path = "crates/vaultseek_web_ui" }
