[package]
name = "vaultseek_core"
version = "0.1.0"
edition = "2024"
description = "VaultSeek File Search — high-performance EFU file search web application"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SNisin/VaultSeek"
keywords = ["search", "files", "web", "rust", "performance"]
categories = ["web-programming", "filesystem", "data-structures"]

[dependencies]
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
regex = { version = "1.11.1", features = ["unicode", "perf", "perf-dfa-full"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[[bin]]
name = "perf_test"
path = "src/bin/perf_test.rs"
test = false
